Issue #2190: Prevent horizontal scroll on mobile for sitenames with long words.

--- a/core/themes/basis/css/component/header.css
+++ b/core/themes/basis/css/component/header.css
@@ -37,6 +37,7 @@
 .header-site-name-wrapper {
   margin: 0;
   padding: 0;
+  overflow-wrap: break-word;
 }
 
 @media (min-width: 34em) {
